Adding new Plan route for filtering by location
