# src/api/routing/planRoutes.ts
@@ -1,10 +1,11 @@
 import express from 'express';
-import { getAllPlans, createPlan, getPlanById, getPlansByUsername, joinPlan, leavePlan, updatePlan, cancelPlan, addAdmin, removeAdmin, isAdmin, getUserParticipatingPlans, deletePlan } from '../controllers/planController';
+import { getAllPlans, createPlan, getPlanById, getPlansByUsername, joinPlan, leavePlan, updatePlan, cancelPlan, addAdmin, removeAdmin, isAdmin, getUserParticipatingPlans, deletePlan, getPlansByLocation } from '../controllers/planController';
 import { authenticateToken } from '../middlewares/authenticateToken';
 import { upload, handleMulterError } from '../middlewares/uploadMiddleware';
 
 const router = express.Router();
 
+router.get('/location', getPlansByLocation);
 router.get('/', getAllPlans);
 router.post('/', authenticateToken, upload.single('image'), handleMulterError, createPlan);
 router.get('/user/:username', getPlansByUsername);
