# swagger.yaml
@@ -31,6 +31,8 @@ components:
               items: { type: number }
               minItems: 2
               maxItems: 2
+            city: { type: string }
+            country: { type: string }
         tags:
           type: array
           items: { type: string }
@@ -588,6 +590,34 @@ paths:
                     type: boolean
         404:
           description: Plan not found
+  /plans/location:
+    get:
+      summary: Get plans filtered by city and country
+      tags: [Plans]
+      parameters:
+        - in: query
+          name: city
+          schema:
+            type: string
+          required: false
+          description: City to search
+        - in: query
+          name: country
+          schema:
+            type: string
+          required: false
+          description: Country to search
+      responses:
+        '200':
+          description: List of plans filtered
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Plan'
+        '500':
+          description: Internal server error
   /messages:
     get:
       summary: Get all messages
@@ -751,4 +781,4 @@ paths:
                   totalPages:
                     type: integer
         500:
-          description: Error fetching scraped sources 
+          description: Error fetching scraped sources
